# rust-big-sur-test

./: .gitignore  Cargo.toml  README.md
big-sur-test/big-sur-test/: big_sur_testApp.swift
big-sur-test/big-sur-test.xcodeproj/: project.pbxproj
testing/: Cargo.toml
testing/src/: lib.rs
testing_api/: .gitignore  Cargo.toml  build.rs
testing_api/src/: lib.rs
xcode/: rust-build-script.sh
xcode/big-sur-test/: ContentView.swift  api_bridge.h  api_bridge.m
xcode/big-sur-test.xcodeproj/: project.pbxproj
