[package]
name = "testing_api"
version = "0.1.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["staticlib"]

[dependencies]
testing = { path = "../testing/" }
serde = "1.0.118"
serde_derive = "1.0.118"

[build-dependencies]
cbindgen = "0.13.2"
